--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-              <!--  <configuration>
-                    <includes>
-                        <include>AuthTest</include>
-                        <include>ProductCategoryTest</include>
-                        <include>FiasTest</include>
-                        <include>FileTest</include>
-                        <include>RegistrationTest</include>
-                    </includes>
-                </configuration>-->
             </plugin>
         </plugins>
     </build>
@@ -84,6 +75,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.5</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit4</artifactId>
+            <version>2.13.9</version>
         </dependency>
     </dependencies>
 </project>
